Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2013-05-24)
----------------

- Initial release