@@ -4,7 +4,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add contenttype class in menu, so the sprites are used there as well.
+  [Julian Infanger]
 
 
 1.0 (2013-05-24)
